test/src/e2e_vm_tests/test_programs/should_fail/insufficient_type_info_enum/src/main.sw
script;

fn main() -> bool {
    let o = Option::None();
    true
}
